--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script>
+      function handleCredentialResponse(response) {
+        console.log(response.credential);
+      }
+    </script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <title>Vite + React + TS</title>
   </head>
   <body>
